# swc-in-rust-examples

./: Cargo.toml  README.md
examples/: basic_codegen.rs  basic_parse.rs  basic_transform.rs  basic_visit.rs  parse_js.rs  transform_tsx.rs
fixtures/: Book-conflicted.tsx  Book.tsx
fixtures/js/: decl.js
src/: lib.rs
