[package]
name = "swc_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_core = { version = "0.72.3", features = ["ecma_parser", "ecma_ast", "ecma_codegen", "ecma_transforms_typescript", "ecma_transforms_react", "common", "ecma_visit"]}